bugfix: eliminate gap between image rows (align-content to flex-start)

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -120,6 +120,8 @@ body {
   display: flex;
   -webkit-flex-wrap: wrap; /* Safari */
   flex-wrap: wrap;
+  -webkit-align-content: flex-start; /* Safari */
+  align-content: flex-start;
   padding: 12px;
   overflow: auto;
 }
